--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <title>SVG Bindings</title>
@@ -11,7 +11,7 @@
       <span>SVG Bindings</span>
       <a
         target="_blank"
-        href="https://angular.io/guide/svg-in-templates"
+        href="https://angular.dev/guide/templates/svg-in-templates"
       >
         SVG in Templates
       </a>
