--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>SVG Bindings</title>
+    <title>Example Binding To Svg</title>
     <base href="/" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" />
   </head>
   <body>
     <nav class="abc-banner">
       <a href="https://angularbootcamp.com/"></a>
-      <span>SVG Bindings</span>
+      <span>Example Binding To Svg</span>
       <a
         target="_blank"
         href="https://angular.dev/guide/templates/svg-in-templates"
